--- a/SPRNetTool/App.xaml
+++ b/SPRNetTool/App.xaml
@@ -1,12 +1,15 @@
 ﻿<Application x:Class="ArtWiz.App"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 StartupUri="View/MainWindow.xaml">
+			 StartupUri="View/MainWindow.xaml"
+			 xmlns:cvt="clr-namespace:ArtWiz.View.Utils">
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="Definitions.xaml" />
 			</ResourceDictionary.MergedDictionaries>
+			
+			<cvt:StringNullOrEmptyToVisibilityConverter x:Key="StringNullOrEmptyToVisibilityConverter" />
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
