--- a/SPRNetTool/Definitions.xaml
+++ b/SPRNetTool/Definitions.xaml
@@ -3,12 +3,14 @@
 					xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					xmlns:shell="clr-namespace:System.Windows.Shell;assembly=PresentationFramework"
-					xmlns:local="clr-namespace:ArtWiz">
+					xmlns:local="clr-namespace:ArtWiz"
+					xmlns:def="clr-namespace:ArtWiz">
 
+	
 	<FontFamily x:Key="{x:Static local:Definitions.FontAwsome}">
 		/ArtWiz;component/Resources/Font Awesome 6 Free-Solid-900.otf#Font Awesome 6 Free Solid
 	</FontFamily>
-	
+
 	<!--#region FiraSans Font-->
 	<FontFamily x:Key="{x:Static local:Definitions.FontFiraSans_Black}">
 		/ArtWiz;component/Resources/Fonts/Fira_Sans/FiraSans-Black.ttf#Fira Sans
@@ -65,7 +67,7 @@
 		/ArtWiz;component/Resources/Fonts/Fira_Sans/FiraSans-ThinItalic.ttf#Fira Sans
 	</FontFamily>
 	<!--#endregion-->
-	
+
 	<!--#region Roboto Font-->
 	<FontFamily x:Key="{x:Static local:Definitions.FontRoboto_Roboto_Black}">
 		/ArtWiz;component/Resources/Fonts/Roboto/Roboto-Black.ttf#Roboto
@@ -104,7 +106,7 @@
 		/ArtWiz;component/Resources/Fonts/Roboto/Roboto-ThinItalic.ttf#Roboto
 	</FontFamily>
 	<!--#endregion-->
-	
+
 	<Color x:Key="{x:Static local:Definitions.BackgroundColorLevel0}">#FF000000</Color>
 	<Color x:Key="{x:Static local:Definitions.BackgroundColorLevel1}">#FF151515</Color>
 	<Color x:Key="{x:Static local:Definitions.BackgroundColorLevel2}">#FF262626</Color>
@@ -867,6 +869,409 @@
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
+	</Style>
+
+	<Style x:Key="{x:Static local:Definitions.MenuParentStyle}"
+		   TargetType="MenuItem">
+		<Setter Property="WindowChrome.IsHitTestVisibleInChrome"
+				Value="True" />
+		<Setter Property="Foreground"
+				Value="White" />
+		<Setter Property="BorderBrush"
+				Value="{StaticResource ResourceKey={x:Static local:Definitions.ForegroundLevel1}}" />
+		<Setter Property="ItemContainerStyle"
+				Value="{DynamicResource MenuItemContainerStyle}" />
+		<Setter Property="Template"
+				Value="{DynamicResource MenuItemControlTemplate2}" />
+		<Style.Resources>
+			<SolidColorBrush x:Key="Menu.Static.Foreground"
+							 Color="White" />
+			<SolidColorBrush x:Key="Menu.Static.Background"
+							 Color="Black" />
+			<SolidColorBrush x:Key="Menu.Static.Border"
+							 Color="Transparent" />
+			
+			<Style x:Key="MenuItemContainerStyle"
+				   TargetType="{x:Type MenuItem}">
+				<Setter Property="HorizontalContentAlignment"
+						Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+				<Setter Property="VerticalContentAlignment"
+						Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+				<Setter Property="Background"
+						Value="Transparent" />
+				<Setter Property="BorderBrush"
+						Value="Transparent" />
+				<Setter Property="Foreground"
+						Value="White" />
+
+				<Setter Property="ScrollViewer.PanningMode"
+						Value="Both" />
+				<Setter Property="Stylus.IsFlicksEnabled"
+						Value="False" />
+
+				<Setter Property="Template"
+						Value="{DynamicResource MenuItemControlTemplate1}" />
+				<Style.Triggers>
+					<Trigger Property="Role"
+							 Value="TopLevelHeader">
+						<Setter Property="Background"
+								Value="Transparent" />
+						<Setter Property="BorderBrush"
+								Value="Transparent" />
+						<Setter Property="Foreground"
+								Value="{StaticResource Menu.Static.Foreground}" />
+						<Setter Property="Template"
+								Value="{DynamicResource {ComponentResourceKey ResourceId=TopLevelHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}" />
+						<Setter Property="Padding"
+								Value="6,0" />
+					</Trigger>
+					<Trigger Property="Role"
+							 Value="TopLevelItem">
+						<Setter Property="Background"
+								Value="{StaticResource Menu.Static.Background}" />
+						<Setter Property="BorderBrush"
+								Value="{StaticResource Menu.Static.Border}" />
+						<Setter Property="Foreground"
+								Value="{StaticResource Menu.Static.Foreground}" />
+						<Setter Property="Template"
+								Value="{DynamicResource {ComponentResourceKey ResourceId=TopLevelItemTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}" />
+						<Setter Property="Padding"
+								Value="6,0" />
+					</Trigger>
+					<Trigger Property="Role"
+							 Value="SubmenuHeader">
+						<Setter Property="Template"
+								Value="{DynamicResource {ComponentResourceKey ResourceId=SubmenuHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}" />
+					</Trigger>
+					<Trigger Property="IsMouseOver"
+							 Value="true">
+						<Setter Property="Background"
+								Value="Pink" />
+					</Trigger>
+					<Trigger Property="IsKeyboardFocusWithin"
+							 Value="true">
+						<Setter Property="Background"
+								Value="{StaticResource ResourceKey={x:Static def:Definitions.MouseOverMenuItemBackgroundBrush}}" />
+					</Trigger>
+				</Style.Triggers>
+			</Style>
+			<ControlTemplate x:Key="MenuItemControlTemplate1"
+							 TargetType="{x:Type MenuItem}">
+				<Border x:Name="templateRoot"
+						MinWidth="200"
+						MinHeight="40"
+						BorderBrush="{TemplateBinding BorderBrush}"
+						BorderThickness="{TemplateBinding BorderThickness}"
+						Background="{TemplateBinding Background}"
+						SnapsToDevicePixels="True">
+					<Grid>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="2" />
+							<RowDefinition Height="*" />
+							<RowDefinition Height="2" />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="5" />
+							<ColumnDefinition MinWidth="22"
+											  Width="Auto" />
+							<ColumnDefinition Width="2" />
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="10" />
+							<ColumnDefinition Width="*" />
+						</Grid.ColumnDefinitions>
+
+						<Rectangle x:Name="RecEff1"
+								   Grid.Row="0"
+								   Visibility="Hidden"
+								   Grid.ColumnSpan="10">
+							<Rectangle.Fill>
+								<LinearGradientBrush EndPoint="0.5,1"
+													 StartPoint="0.5,0">
+									<GradientStop Color="#FF2E3C25" />
+									<GradientStop Color="#FF548235"
+												  Offset="0.5" />
+									<GradientStop Color="#FF2E3C25"
+												  Offset="1" />
+								</LinearGradientBrush>
+							</Rectangle.Fill>
+							<Rectangle.Effect>
+								<DropShadowEffect ShadowDepth="1"
+												  Color="#FF9CB297"
+												  Opacity="1"
+												  BlurRadius="3" />
+							</Rectangle.Effect>
+						</Rectangle>
+						<Rectangle x:Name="RecEff2"
+								   Grid.Row="0"
+								   Visibility="Hidden"
+								   Height="1"
+								   Fill="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel1}}"
+								   Grid.ColumnSpan="10" />
+
+						<Rectangle x:Name="RecEff3"
+								   Visibility="Hidden"
+								   Grid.Row="2"
+								   Grid.ColumnSpan="10">
+							<Rectangle.Fill>
+								<LinearGradientBrush EndPoint="0.5,1"
+													 StartPoint="0.5,0">
+									<GradientStop Color="#FF2E3C25" />
+									<GradientStop Color="#FF548235"
+												  Offset="0.5" />
+									<GradientStop Color="#FF2E3C25"
+												  Offset="1" />
+								</LinearGradientBrush>
+							</Rectangle.Fill>
+							<Rectangle.Effect>
+								<DropShadowEffect ShadowDepth="1"
+												  Color="#FF9CB297"
+												  Opacity="1"
+												  BlurRadius="3" />
+							</Rectangle.Effect>
+						</Rectangle>
+						<Rectangle x:Name="RecEff4"
+								   Grid.Row="2"
+								   Visibility="Hidden"
+								   Height="1"
+								   Fill="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel1}}"
+								   Grid.ColumnSpan="10" />
+
+
+						<ContentPresenter x:Name="Icon"
+										  Grid.Row="1"
+										  Content="{TemplateBinding Icon}"
+										  ContentSource="Icon"
+										  HorizontalAlignment="Center"
+										  Grid.Column="3"
+										  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+										  VerticalAlignment="Center" />
+						<Border x:Name="GlyphPanel"
+								BorderBrush="#FF26A0DA"
+								BorderThickness="1"
+								Grid.Row="1"
+								Grid.Column="1"
+								Background="#3D26A0DA"
+								ClipToBounds="False"
+								HorizontalAlignment="Center"
+								Height="22"
+								Visibility="Hidden"
+								VerticalAlignment="Center"
+								Width="22">
+							<Path x:Name="Glyph"
+								  Data="F1M10,1.2L4.7,9.1 4.5,9.1 0,5.2 1.3,3.5 4.3,6.1 8.3,0 10,1.2z"
+								  Fill="#FF212121"
+								  FlowDirection="LeftToRight"
+								  Height="11"
+								  Width="10" />
+						</Border>
+						<TextBlock x:Name="HeaderTextBlock"
+								   Text="{TemplateBinding Header}"
+								   Grid.Column="5"
+								   Grid.Row="1"
+								   FontSize="16"
+								   FontFamily="Calibri"
+								   VerticalAlignment="Center"
+								   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+					</Grid>
+				</Border>
+				<ControlTemplate.Triggers>
+					<Trigger Property="Icon"
+							 Value="{x:Null}">
+						<Setter Property="Visibility"
+								TargetName="Icon"
+								Value="Collapsed" />
+					</Trigger>
+					<Trigger Property="IsChecked"
+							 Value="True">
+						<Setter Property="Visibility"
+								TargetName="GlyphPanel"
+								Value="Visible" />
+						<Setter Property="Visibility"
+								TargetName="Icon"
+								Value="Collapsed" />
+					</Trigger>
+					<Trigger Property="IsHighlighted"
+							 Value="True">
+						<Setter TargetName="RecEff1"
+								Property="Visibility"
+								Value="Visible" />
+						<Setter TargetName="RecEff2"
+								Property="Visibility"
+								Value="Visible" />
+						<Setter TargetName="RecEff3"
+								Property="Visibility"
+								Value="Visible" />
+						<Setter TargetName="RecEff4"
+								Property="Visibility"
+								Value="Visible" />
+						<Setter Property="Background"
+								TargetName="templateRoot"
+								Value="{StaticResource ResourceKey={x:Static def:Definitions.MouseOverMenuItemBackgroundBrush}}" />
+					</Trigger>
+					<Trigger Property="IsEnabled"
+							 Value="False">
+						<Setter Property="TextElement.Foreground"
+								TargetName="templateRoot"
+								Value="#FF707070" />
+						<Setter Property="Fill"
+								TargetName="Glyph"
+								Value="#FF707070" />
+					</Trigger>
+					<MultiTrigger>
+						<MultiTrigger.Conditions>
+							<Condition Property="IsHighlighted"
+									   Value="True" />
+							<Condition Property="IsEnabled"
+									   Value="False" />
+						</MultiTrigger.Conditions>
+						<Setter Property="Background"
+								TargetName="templateRoot"
+								Value="#0A000000" />
+						<Setter Property="BorderBrush"
+								TargetName="templateRoot"
+								Value="#21000000" />
+					</MultiTrigger>
+				</ControlTemplate.Triggers>
+			</ControlTemplate>
+			<ControlTemplate x:Key="MenuItemControlTemplate2"
+							 TargetType="{x:Type MenuItem}">
+				<Border x:Name="templateRoot"
+						ClipToBounds="False"
+						SnapsToDevicePixels="True">
+
+					<Grid VerticalAlignment="Center"
+						  Margin="10,4"
+						  SnapsToDevicePixels="True">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="Auto" />
+						</Grid.ColumnDefinitions>
+
+						<Border x:Name="EffectBorder"
+								Grid.ColumnSpan="2"
+								ClipToBounds="False"
+								Margin="-10,-4"
+								Background="{TemplateBinding Background}"
+								BorderBrush="{TemplateBinding BorderBrush}">
+							<!--<Border.Effect>
+					<DropShadowEffect ShadowDepth="0"
+									  Color="#FF9CB297"
+									  Opacity="1"
+									  Direction="90"
+									  BlurRadius="20" />
+				</Border.Effect>-->
+						</Border>
+
+						<ContentPresenter x:Name="Icon"
+										  Content="{TemplateBinding Icon}"
+										  ContentSource="Icon"
+										  HorizontalAlignment="Center"
+										  Height="16"
+										  Margin="3"
+										  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+										  VerticalAlignment="Center"
+										  Width="16" />
+						<Path x:Name="GlyphPanel"
+							  Data="F1M10,1.2L4.7,9.1 4.5,9.1 0,5.2 1.3,3.5 4.3,6.1 8.3,0 10,1.2z"
+							  Fill="{TemplateBinding Foreground}"
+							  FlowDirection="LeftToRight"
+							  Margin="3"
+							  Visibility="Collapsed"
+							  VerticalAlignment="Center" />
+						<TextBlock x:Name="HeaderTextBlock"
+								   Text="{TemplateBinding Header}"
+								   Grid.Column="1"
+								   FontSize="14"
+								   FontFamily="{DynamicResource ResourceKey={x:Static def:Definitions.FontFiraSans_Regular}}"
+								   VerticalAlignment="Center"
+								   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+						<Popup x:Name="PART_Popup"
+							   AllowsTransparency="True"
+							   Focusable="False"
+							   IsOpen="{Binding IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}"
+							   VerticalOffset="5"
+							   PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}"
+							   Placement="Bottom">
+							<Border x:Name="SubMenuBorder"
+									CornerRadius="20"
+									BorderBrush="{StaticResource ResourceKey={x:Static def:Definitions.MenuItemBorderBrush}}"
+									BorderThickness="2"
+									ClipToBounds="True"
+									Background="{StaticResource ResourceKey={x:Static def:Definitions.MenuItemBackground}}"
+									Padding="1,12">
+								<ScrollViewer x:Name="SubMenuScrollViewer"
+											  Style="{DynamicResource {ComponentResourceKey ResourceId=MenuScrollViewer, TypeInTargetAssembly={x:Type FrameworkElement}}}">
+									<ItemsPresenter x:Name="ItemsPresenter"
+													KeyboardNavigation.DirectionalNavigation="Cycle"
+													Grid.IsSharedSizeScope="True"
+													SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+													KeyboardNavigation.TabNavigation="Cycle" />
+								</ScrollViewer>
+							</Border>
+						</Popup>
+					</Grid>
+				</Border>
+				<ControlTemplate.Triggers>
+					<Trigger Property="IsHighlighted"
+							 Value="True">
+						<Setter Property="Background"
+								TargetName="EffectBorder"
+								Value="{StaticResource ResourceKey={x:Static def:Definitions.MouseOverMenuItemBackgroundBrush}}" />
+						<Setter Property="BorderThickness"
+								TargetName="EffectBorder"
+								Value="1" />
+
+						<!--<Setter TargetName="EffectBorder2"
+					Property="Visibility"
+					Value="Visible" />-->
+					</Trigger>
+					<Trigger Property="IsSuspendingPopupAnimation"
+							 Value="True">
+						<Setter Property="PopupAnimation"
+								TargetName="PART_Popup"
+								Value="None" />
+					</Trigger>
+					<Trigger Property="Icon"
+							 Value="{x:Null}">
+						<Setter Property="Visibility"
+								TargetName="Icon"
+								Value="Collapsed" />
+					</Trigger>
+					<Trigger Property="IsChecked"
+							 Value="True">
+						<Setter Property="Visibility"
+								TargetName="GlyphPanel"
+								Value="Visible" />
+						<Setter Property="Visibility"
+								TargetName="Icon"
+								Value="Collapsed" />
+					</Trigger>
+
+					<Trigger Property="IsEnabled"
+							 Value="False">
+						<Setter Property="TextElement.Foreground"
+								TargetName="templateRoot"
+								Value="#FF707070" />
+						<Setter Property="Fill"
+								TargetName="GlyphPanel"
+								Value="#FF707070" />
+					</Trigger>
+					
+				</ControlTemplate.Triggers>
+			</ControlTemplate>
+		</Style.Resources>
+		<Style.Triggers>
+			<Trigger Property="IsHighlighted"
+					 Value="True">
+				<Setter Property="Panel.ZIndex"
+						Value="2" />
+			</Trigger>
+			<Trigger Property="IsHighlighted"
+					 Value="False">
+				<Setter Property="Panel.ZIndex"
+						Value="0" />
+			</Trigger>
+		</Style.Triggers>
 	</Style>
 
 </ResourceDictionary>
